--- a/app/views/partials/actionTypeManagement.jade
+++ b/app/views/partials/actionTypeManagement.jade
@@ -26,5 +26,5 @@
                             input(type="checkbox", ng-model="actionType.public", ng-disabled="true")
                         td {{actionType.organizationId}}
                         td
-                            a.btn.btn-xs.btn-primary(ng-href="#/actionTypeEditor/{{actionType.id}}") Modifiy
-            a.btn.btn-primary(ng-href="#/actionTypeEditor") Create a new action type
+                            a.btn.btn-xs.btn-primary(ng-href="/actionTypeEditor/{{actionType.id}}") Modifiy
+            a.btn.btn-primary(ng-href="/actionTypeEditor") Create a new action type
