--- a/app/views/partials/userOrganizationEditor.jade
+++ b/app/views/partials/userOrganizationEditor.jade
@@ -3,7 +3,7 @@
 
 .container
     #page-content-wrapper
-        h1 iFLUX Event Source Instance Editor
+        h1 iFLUX Event Source Editor
         .big-panel
             .col-lg-12.form-horizontal
                 .col-lg-6
