--- a/app/views/partials/eventSourceEditor.jade
+++ b/app/views/partials/eventSourceEditor.jade
@@ -3,30 +3,31 @@
 
 .container
     #page-content-wrapper
-        h1 iFLUX Event Source Instance Editor
+        h1 iFLUX Event Source Editor
         .big-panel
             .col-lg-12.form-horizontal
-                form(name="eventSourceInstanceForm")
+                form(name="eventSource" +
+                "Form")
                     .col-lg-6
                         h3 General Info
                         .form-group(show-errors="")
                             label.col-sm-4.control-label(for="NameTemplate") Name *
                             .col-sm-8
-                                input#NameTemplate.form-control(type="text", name="nameTemplate", placeholder="Name of the template", ng-model="esInstance.name", required="")
+                                input#NameTemplate.form-control(type="text", name="nameTemplate", placeholder="Name of the template", ng-model="eSource.name", required="")
                         .form-group
                             label.col-sm-4.control-label(for="description") Description
                             .col-sm-8
-                                input#description.form-control(type="text", name="description", placeholder="Human readable description", ng-model="esInstance.description")
+                                input#description.form-control(type="text", name="description", placeholder="Human readable description", ng-model="eSource.description")
                 .col-lg-6
                     h3 Schema
                     .form-group
                         .col-sm-12
-                            label.control-label Complete the form below to configure the Event Source Instance *
+                            label.control-label Complete the form below to configure the Event Source *
                             hr
                         .panel-body
                             .col-sm-12
                                 div
-                                    form(sf-schema="schema", sf-form="form", sf-model="esInstance.configuration")
+                                    form(sf-schema="schema", sf-form="form", sf-model="eSource.configuration")
         .col-lg-12
             .alert.alert-danger.fade.in(ng-hide="!errorMessages")
                 div(ng-repeat="errorMessage in errorMessages")
@@ -35,4 +36,4 @@
                     | {{errorMessage}}
             .buttonbar
                 a.btn.btn-primary(ng-click="cancel()") Cancel
-                a.btn.btn-success(ng-click="submitForm()", ng-disabled="eventSourceInstanceForm.$invalid") {{buttonName}}
+                a.btn.btn-success(ng-click="submitForm()", ng-disabled="eventSourceForm.$invalid") {{buttonName}}
