Make the ACE editor resizable #12 Angularjs do not support the resizable function. The solution is to use jquery-ui.

--- a/app/views/partials/actionTargetTemplateEditor.jade
+++ b/app/views/partials/actionTargetTemplateEditor.jade
@@ -26,7 +26,7 @@
                                 .col-sm-10
                                     label.control-label Write a JSON Schema to create a configuration form *
                                     div
-                                        .js-editor-medium
+                                        .js-editor-medium(resizable='')
                                             div(required="", name="jsonSchemaConfiguration", ui-ace="{require: ['ace/ext/language_tools'],\
                       advanced: {\
                       enableSnippets: true,\
@@ -62,7 +62,7 @@
                                 .col-sm-10
                                     label.control-label Schema Form
                                     div
-                                        .js-editor-medium
+                                        .js-editor-medium(resizable='')
                                             div(ui-ace="{require: ['ace/ext/language_tools'],\
                       advanced: {\
                       enableSnippets: true,\
