--- a/app/views/partials/actionTypeEditor.jade
+++ b/app/views/partials/actionTypeEditor.jade
@@ -35,7 +35,7 @@
                                 .col-sm-10
                                     label.control-label(for="configurationForm") Write a JSON Schema to create a configuration form *
                                     div
-                                        .js-editor-medium
+                                        .js-editor-medium(resizable='')
                                             #configurationForm(name="configurationForm", required="", ui-ace="{require: ['ace/ext/language_tools'],\
                       advanced: {\
                       enableSnippets: true,\
