--- a/app/views/partials/eventTypeEditor.jade
+++ b/app/views/partials/eventTypeEditor.jade
@@ -45,7 +45,7 @@
                                 .col-sm-10
                                     label.control-label Write a JSON Schema to create a configuration form *
                                     div
-                                        .js-editor-medium
+                                        .js-editor-medium(resizable='')
                                             div(required="", name="jsonSchemaConfiguration", ui-ace="{require: ['ace/ext/language_tools'],\
                       advanced: {\
                       enableSnippets: true,\
