--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -125,12 +125,15 @@ html
 
 .ace_editor
   height 100%
+  width 100%
 
 .js-editor-small
   height 60px
+  width 100%
 
 .js-editor-medium
   height 180px
+
 .tooltip.tooltipCustomWidth .tooltip-inner
   max-width 500px
   width 500px
@@ -138,4 +141,9 @@ html
 
 .tooltip.tooltipCustomWidth .tooltip-arrow {
   display none
-  }
+}
+
+
+div[resizable]
+  width 100%
+
