--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -21,6 +21,7 @@ html(lang='en' ng-app='iFluxFrontendApp')
             link(href=contextRoot + '/components/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css' rel='stylesheet')
             link(href=contextRoot + '/components/fontawesome/css/font-awesome.min.css' rel='stylesheet')
             link(href=contextRoot + '/components/angular-ui-select/dist/select.min.css' rel='stylesheet')
+            link(href=contextRoot + '/components/jquery-ui/themes/smoothness/jquery-ui.min.css' rel='stylesheet')
             link(rel='stylesheet', href=contextRoot + '/css/style.css')
 
             //- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
@@ -51,6 +52,7 @@ html(lang='en' ng-app='iFluxFrontendApp')
         script(src=contextRoot + '/components/angular-resource/angular-resource.js')
         script(src=contextRoot + '/components/angular-sanitize/angular-sanitize.js')
         script(src=contextRoot + '/components/jquery/dist/jquery.min.js')
+        script(src=contextRoot + '/components/jquery-ui/ui/minified/jquery-ui.min.js')
         script(src=contextRoot + '/components/bootstrap/dist/js/bootstrap.min.js')
         script(src=contextRoot + '/components/angular-bootstrap-switch/dist/angular-bootstrap-switch.js')
         script(src=contextRoot + '/components/tv4/tv4.js')
