--- a/app/views/partials/signin.jade
+++ b/app/views/partials/signin.jade
@@ -31,4 +31,4 @@ section
                                 button#submit.btn.btn-primary(type='submit', value='Submit')
                                     | Login
                                 div(style='float:right; position: relative; ')
-                                    a#signinlink(ng-href='/register') Register
+                                    a#signinlink(ng-href='#{contextRoot}/register') Register
