--- a/app/views/partials/actionTargetManagement.jade
+++ b/app/views/partials/actionTargetManagement.jade
@@ -3,7 +3,7 @@
 
 .container
     #page-content-wrapper
-        h1 iFLUX Action Target Managment
+        h1 iFLUX Action Target Management
         .col-lg-12
             | Search an Action Target Templates
             input(type="text", ng-model="search")
@@ -28,7 +28,7 @@
                             input(type="checkbox", ng-model="actionTargetTemplate.public", ng-disabled="true")
                         td {{actionTargetTemplate.organizationId}}
                         td
-                            a.btn.btn-xs.btn-primary(ng-href="/actionTargetTemplateEditor/{{actionTargetTemplate.id}}") Modifiy
+                            a.btn.btn-xs.btn-primary(ng-href="#{contextRoot}/actionTargetTemplateEditor/{{actionTargetTemplate.id}}") Modifiy
                         td
                             a.btn.btn-xs.btn-primary(ng-click="createAT(actionTargetTemplate.id)") Add
                         td
@@ -51,4 +51,4 @@
                                             td {{actionTarget.id}}
                                             td
                                                 a.btn.btn-xs.btn-danger(ng-click="modifyAT(actionTarget.id, actionTargetTemplate.id)") Modify
-            a.btn.btn-primary(ng-href="/actionTargetTemplateEditor") Create a new action target template
+            a.btn.btn-primary(ng-href="#{contextRoot}/actionTargetTemplateEditor") Create a new action target template
