Fix the login error message

--- a/app/views/partials/settings.jade
+++ b/app/views/partials/settings.jade
@@ -60,7 +60,7 @@
                     .col-lg-8
                         form(name='addOrgForm')
                             .form-group(show-errors='')
-                                label.col-sm-3.control-label Name "
+                                label.col-sm-3.control-label Name
                                 .col-sm-5
                                     input#organizationName.form-control(name='organizationName', ng-minlength='5', type='text', placeholder='Name', ng-model='org.name', required='')
                                 .buttonbar.col-sm-9.col-sm-offset-3
