Organization selection #19 and #9. Take the first org at the first login on the browser and the store the choice on the local storage.

--- a/app/views/navigation.jade
+++ b/app/views/navigation.jade
@@ -35,7 +35,7 @@ nav.navbar.navbar-default.navbar-fixed-top(data-ng-controller='AuthCtrl')
 
             div(ng-show='isAuthenticate')
                 .nav.navbar-nav.navbar-right.header-select(ng-controller="LoginInfoCtrl")
-                    ui-select#organizationSelect(on-select="someFunction($item, $model)", ng-model="currentOrganization", theme="bootstrap")
+                    ui-select#organizationSelect(on-select="changeOrganization($item, $model)", ng-model="currentOrganization", theme="bootstrap")
                         ui-select-match(placeholder="Select an organization") {{$select.selected.name}}
                         ui-select-choices(repeat="organization.id as organization in organizations  | filter: { name: $select.search }", value="{{$select.selected.name}}")
                             div(ng-bind-html="organization.name | highlight: $select.search")
