--- a/app/views/partials/actionTargetManagement.jade
+++ b/app/views/partials/actionTargetManagement.jade
@@ -7,6 +7,10 @@
         .col-lg-12
             | Search an Action Target Templates
             input(type="text", ng-model="search")
+            .alert.alert-danger.fade.in(ng-hide='!errorMessage')
+                a.close(href='#', data-dismiss='alert') ×
+                strong Error!
+                |  {{errorMessage}}
             table.table.table-condensed
                 thead
                     th
@@ -20,6 +24,7 @@
                     th Modification
                     th Create Action Target
                     th View Action Target
+                    th Delete
                 tbody(ng-repeat="actionTargetTemplate in actionTargetTemplates | orderBy:predicate:reverse | filter:{name:search}")
                     tr(ng-class-odd="'rowOddClickable'", ng-class-even="'rowEvenClickable'", title="Click to toggle collapse/expand action target.")
                         td {{actionTargetTemplate.name}}
@@ -33,6 +38,9 @@
                             a.btn.btn-xs.btn-primary(ng-click="createAT(actionTargetTemplate.id)") Add
                         td
                             a.btn.btn-xs.btn-primary(ng-click="selectTableRow($index)") View
+                        td
+                            a.btn.btn-xs.btn-danger(ng-click="deleteATTemplate(actionTargetTemplate.id, $index)", ng-disabled="!actionTarget.deletable") Delete
+
                     tr(ng-show="$index === showIndex")
                         td
                         td(colspan="4")
@@ -44,11 +52,17 @@
                                         th
                                             a(href="", ng-click="predicate = 'id'; reverse=!reverse") Id
                                         th Modification
+                                        th Delete
+
                                     tbody
                                         tr(ng-repeat="actionTarget in actionTargets | orderBy:predicate:reverse | filter:{actionTargetTemplateId : actionTargetTemplate.id}")
                                             td
                                                 | {{actionTarget.name}}
                                             td {{actionTarget.id}}
                                             td
-                                                a.btn.btn-xs.btn-danger(ng-click="modifyAT(actionTarget.id, actionTargetTemplate.id)") Modify
+                                                a.btn.btn-xs.btn-primary(ng-click="modifyAT(actionTarget.id, actionTargetTemplate.id)") Modify
+                                            td
+                                                a.btn.btn-xs.btn-danger(ng-click="deleteAT(actionTarget.id)", ng-disabled="!actionTarget.deletable") Delete
+
             a.btn.btn-primary(ng-href="#{contextRoot}/actionTargetTemplateEditor") Create a new action target template
+
