--- a/app/views/partials/eventSourceManagement.jade
+++ b/app/views/partials/eventSourceManagement.jade
@@ -7,6 +7,10 @@
         .col-lg-12
             | Search an Event Source Templates
             input(type="text", ng-model="search")
+            .alert.alert-danger.fade.in(ng-hide='!errorMessage')
+                a.close(href='#', data-dismiss='alert') ×
+                strong Error!
+                |  {{errorMessage}}
             table.table.table-condensed
                 thead
                     th
@@ -20,6 +24,7 @@
                     th Modification
                     th Create Event Source
                     th View Event Source
+                    th delete
                 tbody(ng-repeat="eventSourceTemplate in eventSourceTemplates | orderBy:predicate:reverse | filter:{name:search}")
                     tr(ng-class-odd="'rowOddClickable'", ng-class-even="'rowEvenClickable'", title="Click to toggle collapse/expand Event Source.")
                         td {{eventSourceTemplate.name}}
@@ -33,6 +38,8 @@
                             a.btn.btn-xs.btn-primary(ng-click="createES(eventSourceTemplate.id)") Add
                         td
                             a.btn.btn-xs.btn-primary(ng-click="selectTableRow($index)") View
+                        td
+                            a.btn.btn-xs.btn-danger(ng-click="deleteESTemplate(eventSourceTemplate.id, $index)", ng-disabled="!eventSourceTemplate.deletable") Delete
                     tr(ng-show="$index === showIndex")
                         td
                         td(colspan="4")
@@ -44,11 +51,14 @@
                                         th
                                             a(href="", ng-click="predicate = 'id'; reverse=!reverse") Id
                                         th Modification
+                                        th Delete
                                     tbody
                                         tr(ng-repeat="eventSource in eventSources | orderBy:predicate:reverse | filter:{eventSourceTemplateId : eventSourceTemplate.id}")
                                             td
                                                 | {{eventSource.name}}
                                             td {{eventSource.id}}
                                             td
-                                                a.btn.btn-xs.btn-danger(ng-click="modifyES(eventSource.id, eventSourceTemplate.id)") Modify
+                                                a.btn.btn-xs.btn-primary(ng-click="modifyES(eventSource.id, eventSourceTemplate.id)") Modify
+                                            td
+                                                a.btn.btn-xs.btn-danger(ng-click="deleteAT(eventSource.id)", ng-disabled="!eventSource.deletable") Delete
             a.btn.btn-primary(ng-href="#{contextRoot}/eventSourceTemplateEditor") Create a new event source template
