--- a/app/views/partials/eventTypeManagement.jade
+++ b/app/views/partials/eventTypeManagement.jade
@@ -7,6 +7,10 @@
         .col-lg-12
             | Search an Avent Types :
             input(type="text", ng-model="search")
+            .alert.alert-danger.fade.in(ng-hide='!errorMessage')
+                a.close(href='#', data-dismiss='alert') ×
+                strong Error!
+                |  {{errorMessage}}
             table.table.table-condensed
                 thead
                     th
@@ -18,6 +22,7 @@
                     th
                         a(href="", ng-click="predicate = 'organization'; reverse=!reverse") Organization
                     th Modification
+                    th Delete
                 tbody(ng-repeat="eventType in eventTypes | orderBy:predicate:reverse | filter:{name:search, description:search}")
                     tr(ng-class-odd="'rowOddClickable'", ng-class-even="'rowEvenClickable'")
                         td {{eventType.name}}
@@ -27,4 +32,6 @@
                         td {{eventType.organizationId}}
                         td
                             a.btn.btn-xs.btn-primary(ng-href="#{contextRoot}/eventTypeEditor/{{ eventType.id }}") Modifiy
+                        td
+                            a.btn.btn-xs.btn-danger(ng-click="deleteET(eventType.id, $index)", ng-disabled="!eventType.deletable") Delete
             a.btn.btn-primary(ng-href="#{contextRoot}/eventTypeEditor") Create a new event type
