--- a/app/views/partials/rulesManagment.jade
+++ b/app/views/partials/rulesManagment.jade
@@ -4,6 +4,10 @@
         .col-lg-12
             | Search a rule:
             input(ng-model='search')
+            .alert.alert-danger.fade.in(ng-hide='!errorMessage')
+                a.close(href='#', data-dismiss='alert') ×
+                strong Error!
+                |  {{errorMessage}}
             table.table.table-condensed
                 thead
                     th
@@ -20,5 +24,5 @@
                         td
                             a.btn.btn-xs.btn-primary(ng-href='#{contextRoot}/ruleEditor/{{rule.id}}') Modification
                         td
-                            a.btn.btn-xs.btn-danger(ng-disabled='true', ng-click='delete(rule.id, $index)') Delete
+                            a.btn.btn-xs.btn-danger(ng-disabled="!rule.deletable", ng-click='delete(rule.id, $index)') Delete
             a.btn.btn-primary(ng-href='#{contextRoot}/ruleEditor') Create a new rule
