Display the properties available for condition and transformation #14 Change the design to fit with the new enhancement

--- a/app/views/partials/eventTypeManagement.jade
+++ b/app/views/partials/eventTypeManagement.jade
@@ -5,7 +5,7 @@
     #page-content-wrapper
         h1 iFLUX Event Types Management
         .col-lg-12
-            | Search an Avent Types :
+            | Search an Event Types :
             input(type="text", ng-model="search")
             .alert.alert-danger.fade.in(ng-hide='!errorMessage')
                 a.close(href='#', data-dismiss='alert') ×
