--- a/app/views/partials/eventSourceManagement.jade
+++ b/app/views/partials/eventSourceManagement.jade
@@ -39,7 +39,7 @@
                         td
                             a.btn.btn-xs.btn-primary(ng-click="selectTableRow($index)") View
                         td
-                            a.btn.btn-xs.btn-danger(ng-click="deleteESTemplate(eventSourceTemplate.id, $index)", ng-disabled="!eventSourceTemplate.deletable") Delete
+                            a.btn.btn-xs.btn-danger(ng-click="!eventSourceTemplate.deletable || deleteESTemplate(eventSourceTemplate.id, $index)", ng-disabled="!eventSourceTemplate.deletable") Delete
                     tr(ng-show="$index === showIndex")
                         td
                         td(colspan="4")
@@ -60,5 +60,5 @@
                                             td
                                                 a.btn.btn-xs.btn-primary(ng-click="modifyES(eventSource.id, eventSourceTemplate.id)") Modify
                                             td
-                                                a.btn.btn-xs.btn-danger(ng-click="deleteAT(eventSource.id)", ng-disabled="!eventSource.deletable") Delete
+                                                a.btn.btn-xs.btn-danger(ng-click="!eventSource.deletable || deleteAT(eventSource.id)", ng-disabled="!eventSource.deletable") Delete
             a.btn.btn-primary(ng-href="#{contextRoot}/eventSourceTemplateEditor") Create a new event source template
