--- a/app/views/partials/rulesManagment.jade
+++ b/app/views/partials/rulesManagment.jade
@@ -24,5 +24,5 @@
                         td
                             a.btn.btn-xs.btn-primary(ng-href='#{contextRoot}/ruleEditor/{{rule.id}}') Modification
                         td
-                            a.btn.btn-xs.btn-danger(ng-disabled="!rule.deletable", ng-click='delete(rule.id, $index)') Delete
+                            a.btn.btn-xs.btn-danger(ng-disabled="!rule.deletable", ng-click='!rule.deletable || delete(rule.id, $index)') Delete
             a.btn.btn-primary(ng-href='#{contextRoot}/ruleEditor') Create a new rule
